--- a/intro.html
+++ b/intro.html
@@ -131,6 +131,7 @@
 <b>Remember that engineers spend a majority of their time debugging their designs. You will too. It is not because this course is made too hard for you…it is just the way programming works.</b>
 </p>
 <p>Tips for remote learning here.</p>
+<p>Find a dedicated work space.</p>
 
 </div>
             </section>
